exchange status
